Changes from jTDS 0.7.1
========================

03/26/2004 - Alin Sinpalean
 o Fixed the fix for bug #922802. ;o) There was a NPE thrown if the batch was
   empty at its first execution.
 o Added a test for bug #582464 (which, although closed, was signalled again
   with a different date - 06/15/1940 0:00:00). Turns out I couldn't reproduce
   it.

03/25/2004 - Alin Sinpalean
 o Fixed bug #922802 (TdsStatement.executeBatch() throws exception if no
   statements added). Indeed other drivers work just fine with empty batches and
   the spec doesn't mention anything about throwing an exception if no batch was
   added.

03/24/2004 - Alin Sinpalean
 o Applied Mike's "Streamlined stored proc processing" patch (#916084). Seems
   like all I'm doing lately is answering forum questions and applying Mike's
   great patches. ;o)

03/21/2004 - Alin Sinpalean
 o Applied Mike's SqlMessage patch to generate SQL state values based on native
   error codes, changed the implementation (from sorted array to HashMap) and
   added a lot of new mappings.

03/20/2004 - Brian Heineman
 o Corrected bug [919594] Clob support; added setObject support for both
   java.sql.Blob and java.sql.Clob.  Added initial Blob and Clob functional
   tests.
 o Corrected SQLException in getBytes() due to invalid length calculation.

03/14/2004 - Alin Sinpalean
 o Applied Mike's version 4 of the single connection patch fixing a number of
   issues (see patch #912364 for the exact description).
 o Updated the home page with a lot of new stuff and added it to the CVS
   repository.

03/13/2004 - Alin Sinpalean
 o Applied a patch by jarek_woloszyn fixing the behavior of lastUpdateCount
   when set.
 o Fixed yet another bug (#914069) which prevented cursor-based ResultSets from
   working with PreparedStatements (an update count was returned, which caused
   an exception to be thrown). Updated SAfeTest to test this.
 o Fixed and simplified current row and total row count handling in
   CursorResultSet.
